# SC-Mod

./: .gitignore  CMakeLists.txt  README.md
src/: CreatorToolsLayer.cpp  CreatorToolsLayer.h  EditLevelLayerHook.cpp  EditLevelLayerHook.h  EndLevelLayerHook.cpp  EndLevelLayerHook.h  GDEditLevelLayer.cpp  GDEditLevelLayer.h  GDEndLevelLayer.cpp  GDEndLevelLayer.h  GDGameSoundManager.cpp  GDGameSoundManager.h  GDLevelCompleteLayer.cpp  GDLevelCompleteLayer.h  GDLevelInfoLayer.cpp  GDLevelInfoLayer.h  GDMenuLayer.cpp  GDMenuLayer.h  GDMoreOptionsLayer.cpp  GDMoreOptionsLayer.h  GDOptionsLayer.cpp  GDOptionsLayer.h  GDPauseLayer.cpp  GDPauseLayer.h  GDPlayLayer.cpp  GDPlayLayer.h  Hook.cpp  Hooks.h  MenuLayerHook.cpp  MenuLayerHook.h  MoreOptionsLayerHook.cpp  MoreOptionsLayerHook.h  PauseLayerHook.cpp  PauseLayerHook.h  SCManager.cpp  SCManager.h  SCOptionsLayer.cpp  SCOptionsLayer.h  SCPracticeFix.cpp  SCPracticeFix.h  (+12 more)
